--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-pandas
-scikit-learn
-pytest
+numpy==1.22.3
+pandas==1.5.2
+scikit-learn==0.24.2
+pytest==7.2.0
 requests
 fastapi==0.63.0
 uvicorn
 gunicorn
-dvc
-dvc_s3
+dvc==2.41.1
+dvc_s3==2.21.0
