--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,12 +31,11 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Configure AWS Credentials
+    - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        role-to-assume: arn:aws:iam::165985645072:role/my-github-actions-role-test
+        aws-region: us-east-2
     - name: pull data from s3 using dvc
       run: |
         # stop the build if there are Python syntax errors or undefined names
