--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy==1.22.3
+numpy==1.24.1
 pandas==1.5.2
-scikit-learn==0.24.2
+scikit-learn==1.2.0
+scipy==1.10.0
 pytest==7.2.0
-requests
+requests==2.28.2
 fastapi==0.63.0
 uvicorn
 gunicorn
